--- a/src/server/paths.adoc
+++ b/src/server/paths.adoc
@@ -2,7 +2,7 @@
 [[_paths]]
 == Paths
 
-[[_post_poll]]
+[[_post_poll_collection]]
 === POST /poll
 
 ==== Responses
@@ -19,7 +19,7 @@
 * default
 
 
-[[_get_poll]]
+[[_get_poll_collection]]
 === GET /poll
 
 ==== Responses
@@ -36,8 +36,47 @@
 * default
 
 
-[[_delete_poll]]
-=== DELETE /poll
+[[_get_poll_item]]
+=== GET /poll/{id}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^9a,.^4a"]
+|===
+|Type|Name|Description|Schema
+|**Header**|**X-Fields** +
+__optional__|An optional fields mask|string (mask)
+|**Path**|**id** +
+__required__|Unique poll Id|string
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_poll_item,Poll_Item>>
+|===
+
+
+==== Tags
+
+* default
+
+
+[[_delete_poll_item]]
+=== DELETE /poll/{id}
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^9a,.^4a"]
+|===
+|Type|Name|Description|Schema
+|**Path**|**id** +
+__required__|Unique poll Id|string
+|===
+
 
 ==== Responses
 
