--- a/src/server/definitions.adoc
+++ b/src/server/definitions.adoc
@@ -2,8 +2,25 @@
 [[_definitions]]
 == Definitions
 
-[[_poll_item]]
-=== Poll_Item
+[[_create_poll_fields]]
+=== Create_Poll_Fields
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**form_type** +
+__optional__|string
+|**owner_id** +
+__optional__|integer
+|**prompt** +
+__optional__|string
+|**resp_struct** +
+__optional__|<<_response_struct,Response_Struct>>
+|===
+
+
+[[_poll_fields]]
+=== Poll_Fields
 
 [options="header", cols=".^3a,.^4a"]
 |===
@@ -17,12 +34,51 @@ __optional__|integer
 |**prompt** +
 __optional__|string
 |**resp_struct** +
-__optional__|<<_resp_struct,Resp_Struct>>
+__optional__|<<_response_struct,Response_Struct>>
 |===
 
 
-[[_resp_struct]]
-=== Resp_Struct
+[[_poll_id]]
+=== Poll_Id
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**id** +
+__optional__|integer
+|===
+
+
+[[_register_user]]
+=== Register_User
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**email** +
+__optional__|string
+|===
+
+
+[[_response_fields]]
+=== Response_Fields
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**answer** +
+__optional__|integer
+|**comment** +
+__optional__|string
+|**poll_id** +
+__optional__|integer
+|**responder_id** +
+__optional__|integer
+|===
+
+
+[[_response_struct]]
+=== Response_Struct
 
 [options="header", cols=".^3a,.^4a"]
 |===
