--- a/backend/polly_api_documentation.adoc
+++ b/backend/polly_api_documentation.adoc
@@ -61,7 +61,7 @@ __required__||<<_create_poll_fields,Create_Poll_Fields>>
 [options="header", cols=".^2a,.^14a,.^4a"]
 |===
 |HTTP Code|Description|Schema
-|**201**|Poll successfully create|No Content
+|**201**|Success|<<_poll_id,Poll_Id>>
 |===
 
 
@@ -663,6 +663,17 @@ __required__|poll owner id|integer
 __required__|poll question prompt|string
 |**resp_struct** +
 __optional__||<<_response_struct,Response_Struct>>
+|===
+
+
+[[_poll_id]]
+=== Poll_Id
+
+[options="header", cols=".^3a,.^11a,.^4a"]
+|===
+|Name|Description|Schema
+|**id** +
+__required__|poll id|integer
 |===
 
 
