--- a/backend/polly_api_documentation.adoc
+++ b/backend/polly_api_documentation.adoc
@@ -37,7 +37,7 @@ __BasePath__ : /
 [[_paths]]
 == Paths
 
-[[_create_a_new_poll]]
+[[_create_a_new_poll_use_multiple_choice_for_select_all]]
 === Creates a new Poll
 ....
 POST /poll/
@@ -151,90 +151,6 @@ __optional__|An optional fields mask|string (mask)
 |===
 
 
-[[_vote_for_answer_comment_optional]]
-=== post a response to given poll id
-....
-POST /poll/response/{poll_id}
-....
-
-
-==== Parameters
-
-[options="header", cols=".^2a,.^3a,.^4a"]
-|===
-|Type|Name|Schema
-|**Path**|**poll_id** +
-__required__|string
-|**Body**|**payload** +
-__required__|<<_response_fields,Response_Fields>>
-|===
-
-
-==== Responses
-
-[options="header", cols=".^2a,.^14a,.^4a"]
-|===
-|HTTP Code|Description|Schema
-|**201**|Response successfully posted|No Content
-|===
-
-
-==== Tags
-
-* poll
-
-
-==== Security
-
-[options="header", cols=".^3a,.^4a"]
-|===
-|Type|Name
-|**apiKey**|**<<_bearer_auth,Bearer Auth>>**
-|===
-
-
-[[_votes_for_each_answer_to_a_poll]]
-=== gets responses of poll at this id
-....
-GET /poll/response/{poll_id}
-....
-
-
-==== Parameters
-
-[options="header", cols=".^2a,.^3a,.^9a,.^4a"]
-|===
-|Type|Name|Description|Schema
-|**Header**|**X-Fields** +
-__optional__|An optional fields mask|string (mask)
-|**Path**|**poll_id** +
-__required__||string
-|===
-
-
-==== Responses
-
-[options="header", cols=".^2a,.^14a,.^4a"]
-|===
-|HTTP Code|Description|Schema
-|**200**|Success|< <<_aggregated_answers,Aggregated_Answers>> > array
-|===
-
-
-==== Tags
-
-* poll
-
-
-==== Security
-
-[options="header", cols=".^3a,.^4a"]
-|===
-|Type|Name
-|**apiKey**|**<<_bearer_auth,Bearer Auth>>**
-|===
-
-
 [[_get_a_poll_by_poll_id]]
 === Gets poll specified by poll_id
 ....
@@ -302,6 +218,128 @@ __required__|<<_update_poll_fields,Update_Poll_Fields>>
 |===
 |HTTP Code|Description|Schema
 |**200**|Poll successfully patched|No Content
+|===
+
+
+==== Tags
+
+* poll
+
+
+==== Security
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Type|Name
+|**apiKey**|**<<_bearer_auth,Bearer Auth>>**
+|===
+
+
+[[_has_current_user_responded_to_poll]]
+=== GET /poll/{poll_id}/responded
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^9a,.^4a"]
+|===
+|Type|Name|Description|Schema
+|**Header**|**X-Fields** +
+__optional__|An optional fields mask|string (mask)
+|**Path**|**poll_id** +
+__required__||string
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_did_respond,did_respond>>
+|===
+
+
+==== Tags
+
+* poll
+
+
+==== Security
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Type|Name
+|**apiKey**|**<<_bearer_auth,Bearer Auth>>**
+|===
+
+
+[[_vote_for_answer_comment_optional]]
+=== post a response to given poll id
+....
+POST /poll/{poll_id}/response
+....
+
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^4a"]
+|===
+|Type|Name|Schema
+|**Path**|**poll_id** +
+__required__|string
+|**Body**|**payload** +
+__required__|<<_response_fields,Response_Fields>>
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**201**|Response successfully posted|No Content
+|===
+
+
+==== Tags
+
+* poll
+
+
+==== Security
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Type|Name
+|**apiKey**|**<<_bearer_auth,Bearer Auth>>**
+|===
+
+
+[[_votes_for_each_answer_to_a_poll]]
+=== gets responses of poll at this id
+....
+GET /poll/{poll_id}/response
+....
+
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^9a,.^4a"]
+|===
+|Type|Name|Description|Schema
+|**Header**|**X-Fields** +
+__optional__|An optional fields mask|string (mask)
+|**Path**|**poll_id** +
+__required__||string
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|<<_get_all_responses_poll,get_all_responses_poll>>
 |===
 
 
@@ -496,6 +534,42 @@ __required__|<<_user_follow_create,user_follow_create>>
 |===
 
 
+[[_get_list_of_users_that_have_invited_current_user_to_subscribe]]
+=== GET /user/me/invitedby
+
+==== Parameters
+
+[options="header", cols=".^2a,.^3a,.^9a,.^4a"]
+|===
+|Type|Name|Description|Schema
+|**Header**|**X-Fields** +
+__optional__|An optional fields mask|string (mask)
+|===
+
+
+==== Responses
+
+[options="header", cols=".^2a,.^14a,.^4a"]
+|===
+|HTTP Code|Description|Schema
+|**200**|Success|< <<_invited_by_user,invited_by_user>> > array
+|===
+
+
+==== Tags
+
+* user
+
+
+==== Security
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Type|Name
+|**apiKey**|**<<_bearer_auth,Bearer Auth>>**
+|===
+
+
 [[_get_people_user_is_subscribed_to]]
 === get people user is subscribed to
 ....
@@ -635,8 +709,8 @@ __optional__|number of counts for the corresponding answer value|integer
 |===
 |Name|Description|Schema
 |**form_type** +
-__required__|form type +
-**Example** : `"multChoice"`|enum (multChoice, selectAll, numScale, freeResp)
+__required__|form type, use multChoice for True/False +
+**Example** : `"multChoice"`|enum (multChoice, numScale, freeResp)
 |**prompt** +
 __required__|poll question prompt|string
 |**resp_struct** +
@@ -651,8 +725,8 @@ __optional__||<<_response_struct,Response_Struct>>
 |===
 |Name|Description|Schema
 |**form_type** +
-__required__|form type +
-**Example** : `"multChoice"`|enum (multChoice, selectAll, numScale, freeResp)
+__required__|form type, use multChoice for True/False +
+**Example** : `"multChoice"`|enum (multChoice, numScale, freeResp)
 |**id** +
 __required__|poll id|integer
 |**is_open** +
@@ -683,10 +757,10 @@ __required__|poll id|integer
 [options="header", cols=".^3a,.^11a,.^4a"]
 |===
 |Name|Description|Schema
-|**answer** +
-__required__|integer value for answer|integer
 |**comment** +
 __optional__|string value of comments|string
+|**option** +
+__required__|integer value for answer|integer
 |===
 
 
@@ -701,7 +775,7 @@ __optional__|label for high value on scale|string
 |**low** +
 __optional__|label for low value on scale|string
 |**options** +
-__optional__|list of answer options|< string > array
+__optional__|list of answer options. For True/False polls simply add [False, True] options|< string > array
 |===
 
 
@@ -724,6 +798,30 @@ __required__|Status of whether poll is still open|boolean
 |Name|Schema
 |**status** +
 __optional__|string
+|===
+
+
+[[_did_respond]]
+=== did_respond
+
+[options="header", cols=".^3a,.^11a,.^4a"]
+|===
+|Name|Description|Schema
+|**responded** +
+__optional__|has this user responded to the poll|boolean
+|===
+
+
+[[_get_all_responses_poll]]
+=== get_all_responses_poll
+
+[options="header", cols=".^3a,.^4a"]
+|===
+|Name|Schema
+|**aggregates** +
+__optional__|< <<_aggregated_answers,Aggregated_Answers>> > array
+|**responses** +
+__optional__|< <<_single_responses,single_responses>> > array
 |===
 
 
@@ -750,6 +848,40 @@ __optional__|name of your follower|string
 __optional__|name of who I am following|string
 |**user_id** +
 __optional__|id of who I am following|integer
+|===
+
+
+[[_invited_by_user]]
+=== invited_by_user
+
+[options="header", cols=".^3a,.^11a,.^4a"]
+|===
+|Name|Description|Schema
+|**name** +
+__optional__|name of user who sent invitation|string
+|**user_id** +
+__optional__|id of user who sent invitation|integer
+|===
+
+
+[[_single_responses]]
+=== single_responses
+
+[options="header", cols=".^3a,.^11a,.^4a"]
+|===
+|Name|Description|Schema
+|**answer** +
+__optional__|option selected|integer
+|**comment** +
+__optional__|The responders comment|string
+|**created_date** +
+__optional__|String formatted datetime|string
+|**id** +
+__optional__|primary key|integer
+|**poll_id** +
+__optional__|The poll id|integer
+|**responder_id** +
+__optional__|Id of the responder|integer
 |===
 
 
@@ -794,6 +926,8 @@ __required__|id of the user to follow|integer
 |Name|Description|Schema
 |**email** +
 __optional__|user email|string
+|**fb_id** +
+__required__|facebook id|string
 |**id** +
 __required__|user id|integer
 |**name** +
